# z3_mcp

simple_v0/: README.md  mcp.json  pyproject.toml  z3_mcp_server.py
